--- a/index.html
+++ b/index.html
@@ -3,69 +3,97 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <title>Portfolio Website - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portfolio Website - Blog</title>
+    <link rel="stylesheet" href="style-2.css">
 </head>
 <body>
-            <div class="container">
-                <nav>
-                    <img src="images/blckartchive.png" class="logo">
-                        <a href="t1.html"></a>
-                    <ul>
-                        <li><a href="t1.html">HOME</a></li>
-                        <li><a href="t2.html">BLOG</a></li>
-                        <li><a href="t3.html">FLEX PAGE</a></li>
-                    </ul>
-                    <img src="images/menu-white.png" class="menu-img">
-                </nav>
+    <div class="container">
+        <nav>
+            <img src="images/blckartchive.png" class="logo">
+                <a href="t1.html"></a>
+            <ul>
+                <li><a href="t1.html">HOME</a></li>
+                <li><a href="t2.html">BLOG</a></li>
+                <li><a href="t3.html">FLEX PAGE</a></li>
+            </ul>
+            <img src="images/menu-white.png" class="menu-img">
+        </nav>
+    </div>
+    <main>
+        <div class="content">
+            <h1>IT111 Blog Entries</h1>
+            <p>...an overview of my midterm ventures</p>
+            <div class="line"></div>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+                <h2>Topic 1</h2>
+                <p>This topic refreshed me from my Junior High School IT Class, at least on the basic ones. As I incorporate my capabilities in editing digitals to my computer course, I have somehow felt the sense of satisfaction and relief. <br></br>
+                This course discussed the ages of computer inventions and their respective inventors in late centuries. It also discussed the uses, purpose, and significance in modern society.</p>
+                <img src="images/Group_1_Tion.jpg" alt="Time-Info">
+                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\images\Group_1_Tion.jpg">Technology Timeline Infographics</a>
             </div>
-        <main>        
-             <!--image header-->
-            <section class="profile">
-                <div class="division">
-                    <img src="images/ghibli12.jpg" class="main-img">
-                    <h1>"The LOST blessing was found inside the mausoleum.."</h1>
-                </div>
-            </section>
+            <div class="grid-item">
+                <h2>Topic 2: Information Processing Cycle and Computer Systems</h2>
+                <p>In this topic, we discussed about data and information processing, we discussed its cycle and its characteristics. Learning its phases and processes made me think to myself that the process of everything is very meticulous and should be organized or else it won't be read.</p>
+            </div>
+            <div class="grid-item">
+                <h2>Topic 3: Information Processing Cycle and Computer Systems</h2>
+                <p>During this topic, we learned about the systems, components, and the classifications of computer. Through this lecture,<br>
+                I refreshed my past learnings about different categories of a computer's components, where I remember now where classify a specific part.</br></p>
+            </div>
+            <div class="grid-item">
+                <h2>Topic 4</h2>
+                <p>This topic taught us the basic concepts of computer security and the different kinds of cybercrimes. We also learned the terminologies of the cybercriminals in different crimes they've committed. 
+                    Through this, I realized that I have actually committed few crimes that could potentially be a major cause of my trip behind the bars if I will take a wrong turn.
+                </p>
+                <img src="images/CC.png" alt="Cybercrime Case">
+                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\files\Group_2_CCA.pdf">Basic Concept of Computer Security</a>
+            </div>
+            <div class="grid-item">
+                <h3>Topic 5</h3>
+                <p>In this topic, we read about the Internet and world Wide Web and we were tasked to create a digital output by group where we compare-contrast Cloud-computing, Artificial Intelligent, and Internet of Things</p>
+                <img src="images/VD_Cross.png" alt="Quadrum">
+                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\files\Quadrumvirate + 1_Tion.pdf">Cross-Analysis on Tech Trends</a>
+            </div>
+            <div class="grid-item">
+                <h3>Topic 6</h3>
+                <p>This topic introduced us to HTML and CSS. As for me, it's a nostalgic experience to make an HTML CSS website like it's a first time. I am lowkey excited on this topic because I've always liked to delve
+                    in creating mini websites, and I tried few of those using carrd.co site. As of now, I am challenging myself to create a website using vast and complex programs with complex syntaxes.
+                </p>
+                <img src="images/html-uno.png" alt="HTML 1st Activity">
+                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\files\HTML_First_Activity.pdf">HTML and CSS</a>
+            </div>
+            <div class="grid-item">
+                <h3>Topic 6</h3>
+                <p>After the introduction of HTML and CSS customs, we were tasked to create a wireframe for our desired website output. I'm sure I did that wrong during submissions but at least I got to learn how to make a proper wireframe.</p>
+                <img src="images/wireframe.png" alt="Wireframe">
+                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\files\Tion_PortfolioWireframe_.pdf">Wireframe</a>
+            </div>
+        </div>
+        <div class="content-2">
+            <h2>IT Fundamentals Outputs</h2>
+            <p>Below are my recent animation entries during our Basic Animation class.</p>
+            <div class="line"></div>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+                <h2>Bouncing Ball</h2>
+                <p>After five years, I am back with the struggle of animating objects using various programs. But using Krita for the first times sounds challenging since I am totally not familiar with the specs and functions of the program.</p>
+                <img src="images/bouncing_ball.gif" alt="bball">
+                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\images\bouncing_ball.gif">Bouncing Ball</a>
+            </div>
+            <div class="grid-item">
+                <h2>Stickman Walkiing</h2>
+                <p>After five years, I am back with the struggle of animating objects using various programs. But using Krita for the first times sounds challenging since I am totally not familiar with the specs and functions of the program.</p>
+                <img src="images/stckman.gif" alt="walk">
+                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\images\stckman.gif">Stickman Walking</a>
+            </div>
+        </div>    
+    </main>
+    <footer>
+        <small>© Coded by Issyd Tion - All Rights Reserved 2024.</small>
+    </footer>
 
-            <!--Intro section-->
-            <section class="welcome">
-                <h3>WELCOME ࣪𖤐.ᐟ</h3>
-                <h2>I am Issyd Kate T. Tion, a freshman from Bukidnon <br>State University and currently enrolled under </br>BS Entertainment and Multimedia Computing.</br></h2>
-                <h1>My current hobbies are:</h1>
-                    <li>sketching</li>
-                    <li>coping through online gacha games with friends</li>
-                    <li>reading books and mangas</li>
-                    <li>slacking throughout the day</li>
-                <p>I am currently into visual arts and I want to pursue the path of being an Illustrator and Animator.</p>
-            </section>
-            <section class="pics">
-                <div class="icon">
-                    <img src="images/emlmao.jpg" class="icon-img">
-                    <h2> Hi!! </h2>
-                 </div>
-            </section>
-            
-            <!-- Navigation Buttons Section -->
-            <section class="nav-buttons">
-                <a href="https://youtu.be/4jsJs3p3HvU" class="btn">a whisper to my future</a>
-            </section>
-
-            <!-- Social Links Section -->
-            <section class="links-section">
-                <div>
-                    <a href="https://www.instagram.com/_ikkeijii/">Instagram</a>
-                </div>
-                <div>
-                    <a href="https://www.facebook.com/profile.php?id=100086022643524">Facebook</a>
-                </div>
-                <div>
-                    <a href="https://open.spotify.com/user/pj21xlsn77sql9chomatzmmya?si=89dde7e2afaf4d03">Spotify</a>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <small>© Coded by Issyd Tion - All Rights Reserved 2024.</small>
-        </footer>
 </body>
 </html>
