--- a/index.html
+++ b/index.html
@@ -21,73 +21,73 @@
     </div>
     <main>
         <div class="content">
-            <h1>IT111 Blog Entries</h1>
-            <p>...an overview of my midterm ventures</p>
+            <h1>Prose</h1>
+            <p>few collections of my "decent" written pieces</p>
             <div class="line"></div>
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <h2>Topic 1</h2>
-                <p>This topic refreshed me from my Junior High School IT Class, at least on the basic ones. As I incorporate my capabilities in editing digitals to my computer course, I have somehow felt the sense of satisfaction and relief. <br></br>
-                This course discussed the ages of computer inventions and their respective inventors in late centuries. It also discussed the uses, purpose, and significance in modern society.</p>
-                <img src="images/Group_1_Tion.jpg" alt="Time-Info">
-                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\images\Group_1_Tion.jpg">Technology Timeline Infographics</a>
+                <h5>Black-Feathered Knights</h5>
+                <p>"...a teenager found its comfort to a viscious raven in the middle of an afternoon gloomy showers"</p>
+                <img src="images/Black_feathered_knights.jpg" alt="feather">
+                <a href="E:\IT111\images\Black_feathered_knights.jpg">View</a>
             </div>
             <div class="grid-item">
-                <h2>Topic 2: Information Processing Cycle and Computer Systems</h2>
-                <p>In this topic, we discussed about data and information processing, we discussed its cycle and its characteristics. Learning its phases and processes made me think to myself that the process of everything is very meticulous and should be organized or else it won't be read.</p>
+                <h5>The Broken Liar</h5>
+                <p>"A 20-year-old youth who rather tell lies than being honest to itself, who began to have existential crises in one sitting."</p>
+                <img src="images/The_Broken_Liar.jpg" alt="liar">
+                <a href="E:\IT111\images\The_Broken_Liar.jpg">View</a>
             </div>
             <div class="grid-item">
-                <h2>Topic 3: Information Processing Cycle and Computer Systems</h2>
-                <p>During this topic, we learned about the systems, components, and the classifications of computer. Through this lecture,<br>
-                I refreshed my past learnings about different categories of a computer's components, where I remember now where classify a specific part.</br></p>
+                <h5>The Inferior One</h5>
+                <p>"a young daft poet who has inferiority complex, compares himself to anyone he sees. A typical perseption of a broken youth with insecurities."</p>
+                <img src="images/The_Inferior_One.jpg" alt="pity">
+                <a href="E:\IT111\images\The_Inferior_One.jpg">View</a>
             </div>
             <div class="grid-item">
-                <h2>Topic 4</h2>
-                <p>This topic taught us the basic concepts of computer security and the different kinds of cybercrimes. We also learned the terminologies of the cybercriminals in different crimes they've committed. 
-                    Through this, I realized that I have actually committed few crimes that could potentially be a major cause of my trip behind the bars if I will take a wrong turn.
-                </p>
-                <img src="images/CC.png" alt="Cybercrime Case">
-                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\files\Group_2_CCA.pdf">Basic Concept of Computer Security</a>
+                <h5>The Seraph of thine End</h5>
+                <p>"A doomed young love where one focused to love the other who has suicidal thoughts and later on successfully took its own life."</p>
+                <img src="images/tsote.jpg" alt="seraph">
+                <a href="E:\IT111\images\tsote.jpg">View</a>
             </div>
             <div class="grid-item">
-                <h3>Topic 5</h3>
-                <p>In this topic, we read about the Internet and world Wide Web and we were tasked to create a digital output by group where we compare-contrast Cloud-computing, Artificial Intelligent, and Internet of Things</p>
-                <img src="images/VD_Cross.png" alt="Quadrum">
-                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\files\Quadrumvirate + 1_Tion.pdf">Cross-Analysis on Tech Trends</a>
-            </div>
-            <div class="grid-item">
-                <h3>Topic 6</h3>
-                <p>This topic introduced us to HTML and CSS. As for me, it's a nostalgic experience to make an HTML CSS website like it's a first time. I am lowkey excited on this topic because I've always liked to delve
-                    in creating mini websites, and I tried few of those using carrd.co site. As of now, I am challenging myself to create a website using vast and complex programs with complex syntaxes.
-                </p>
-                <img src="images/html-uno.png" alt="HTML 1st Activity">
-                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\files\HTML_First_Activity.pdf">HTML and CSS</a>
-            </div>
-            <div class="grid-item">
-                <h3>Topic 6</h3>
-                <p>After the introduction of HTML and CSS customs, we were tasked to create a wireframe for our desired website output. I'm sure I did that wrong during submissions but at least I got to learn how to make a proper wireframe.</p>
-                <img src="images/wireframe.png" alt="Wireframe">
-                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\files\Tion_PortfolioWireframe_.pdf">Wireframe</a>
+                <h5>Transfixed Prototypes</h5>
+                <p>"a home doesn't seems like a home anymore." A meccha-descriptive prose.</p>
+                <img src="images/Transfixed_Prototype.jpg" alt="meccha">
+                <a href="E:\IT111\images\Transfixed_Prototype.jpg">View</a>
             </div>
         </div>
+
         <div class="content-2">
-            <h2>IT Fundamentals Outputs</h2>
-            <p>Below are my recent animation entries during our Basic Animation class.</p>
+            <h2>Traditional Art sneaks</h2>
+            <p>Below are my casual sketches whenever I am alone.</p>
             <div class="line"></div>
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <h2>Bouncing Ball</h2>
-                <p>After five years, I am back with the struggle of animating objects using various programs. But using Krita for the first times sounds challenging since I am totally not familiar with the specs and functions of the program.</p>
-                <img src="images/bouncing_ball.gif" alt="bball">
-                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\images\bouncing_ball.gif">Bouncing Ball</a>
+                <h2>TradiArt #1</h2>
+                <img src="images/img-1.jpg" alt="draw1">
+                <a href="E:\IT111\images\img-1.jpg">View</a>
             </div>
             <div class="grid-item">
-                <h2>Stickman Walkiing</h2>
-                <p>After five years, I am back with the struggle of animating objects using various programs. But using Krita for the first times sounds challenging since I am totally not familiar with the specs and functions of the program.</p>
-                <img src="images/stckman.gif" alt="walk">
-                <a href="C:\Users\ACER\Documents\2024-2025 NOTES 1ST SEM\IT111\images\stckman.gif">Stickman Walking</a>
+                <h2>TradiArt #2</h2>
+                <img src="images/img-2.jpg" alt="draw2">
+                <a href="E:\IT111\images\img-2.jpg">View</a>
+            </div>
+            <div class="grid-item">
+                <h2>TradiArt #3</h2>
+                <img src="images/img-3.jpg" alt="draw3">
+                <a href="E:\IT111\images\img-3.jpg">View</a>
+            </div>
+            <div class="grid-item">
+                <h2>TradiArt #4</h2>
+                <img src="images/img-4.jpg" alt="draw4">
+                <a href="E:\IT111\images\img-4.jpg">View</a>
+            </div>
+            <div class="grid-item">
+                <h2>TradiArt #5</h2>
+                <img src="images/img-5.jpg" alt="draw5">
+                <a href="E:\IT111\images\img-5.jpg">View</a>
             </div>
         </div>    
     </main>
